Fixed horizontal scrolling gsap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -236,6 +236,7 @@ html {
 /* Project Section */
 .project-showcase {
   background: #f5f5f5;
+  overflow-x: hidden;
 }
 
 .projects {
